[project]
name = "polyscript"
version = "0.0.3"
description = "Parametric CAD DSL"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.1",
    "cadquery-ocp>=7.8",
]

[project.scripts]
poly = "polyscript.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=6.0"]
bundle = ["pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyscript"]

[tool.pytest.ini_options]
testpaths = ["tests"]
