[project]
name = "polyscript"
version = "0.0.7"
description = "Parametric CAD DSL"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.1",
    "cadquery-ocp>=7.8",
]

[project.scripts]
poly = "polyscript.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "ruff>=0.11"]
bundle = ["pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyscript"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
